Fix Sidenav responsive collapsing bug. To fix this in your own templates make sure the side nav UL with id 'menu-content' also has the 'collapse' class present in the markup.

--- a/test/dummy/app/assets/stylesheets/bootstrap_docs.scss
+++ b/test/dummy/app/assets/stylesheets/bootstrap_docs.scss
@@ -277,11 +277,11 @@ body.theme-container .container {
 }
 
 .vp-animate {
-  -webkit-transition: width 0.8s ease-out;
-  -moz-transition: width 0.8s ease-out;
-  -ms-transition: width 0.8s ease-out;
-  -o-transition: width 0.8s ease-out;
-  transition: width 0.8s ease-out;
+  -webkit-transition: width 0.2s ease-out;
+  -moz-transition: width 0.2s ease-out;
+  -ms-transition: width 0.2s ease-out;
+  -o-transition: width 0.2s ease-out;
+  transition: width 0.2s ease-out;
 }
 
 #sg-gen-container {
